# dadgan.com-django-site

./: .dockerignore  .gitignore  COMPLETION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  README.md  README_INDEX.md  SETUP_GUIDE.md  analyze_databases.py  blog-single.html  blog.html  build_docker.sh  build_remote.sh  check_and_fix.sh  deploy.sh  deploy_to_server_prompt.txt  export_data_for_mysql.sh  extract_data.sh  extract_data_better.py  extract_data_final.py  extract_from_sql.py  extract_simple.py  import_blog_posts.py  import_qa_posts.py  index.html  manage.py  manage_site.sh  migrate_from_laravel.sh  migrate_sqlite_to_mysql.sh  migrate_to_mysql_django.sh  new_dadgan.html  pyproject.toml  qa-single.html  qa.html  renew_ssl.sh  setup_ssl_renewal.sh  sync_and_deploy.sh
dadgan_project/: asgi.py  settings.py  urls.py  wsgi.py
data_export/: django_data.json
data_extraction/: qa_posts.json  wordpress_posts.json
laravel_backup/: MIGRATION_GUIDE.md  c1dadgan.sql  c1faq.sql
lawfirm/: admin.py  apps.py  forms.py  models.py  seo.py  signals.py  urls.py  views.py
lawfirm/management/commands/: import_qa_data.py  populate_blog.py  populate_data.py  populate_initial_data.py
lawfirm/migrations/: 0001_initial.py  0002_blogpost_seo_description_blogpost_seo_keywords_and_more.py  0003_consultationrequest_admin_message_and_more.py
lawfirm/templatetags/: seo_tags.py
static/: browserconfig.xml  manifest.json  robots.txt
templates/: base.html
templates/lawfirm/: blog_detail.html  blog_list.html  home.html  profile.html  qa_detail.html  qa_list.html  search.html
templates/registration/: login.html  signup.html
tmp_sql_migrate/: dump.sqlite.sql  dump_mysql.sql
